--- a/笔记.md
+++ b/笔记.md
@@ -1,6 +1,80 @@
 # c
 
-## 第五错误点
+## 第五章
 
 1. 注意＝的优先级是最后的。
 2. 同时 scanf 输入数据不能使用类似 2.2f 去修饰。
+
+## 第八章
+
+1. 函数声明
+
+声明语句只用申明类型，同时，如果声明了例如 a 名字，后续定义名字不必相同
+
+```c
+int max (int,int);
+int min (int a,int b);
+int min (int num1,int num2){
+  return num1>num2?num2:num1;
+}
+```
+
+2. 若类型不匹配，c 语言会将类型转换为形式参数的类型
+
+```c
+int min(int,int);
+// 此处3.0 会被类型转换
+min(3.0,2.0);
+```
+
+3. 对于较小的函数来说，可以将其放在第一次调用前声明
+
+```c
+// 既是函数定义，也是函数原型
+int min(int a, int b)
+{
+  return a < b ? a : b;
+}
+int main(void)
+{
+  min(1, 2);
+  return 0;
+}
+```
+
+4.
+
+```c
+// 进制转换
+#include <stdio.h>
+#define CHAR_TO_NUM 48
+
+// 将10进制的数字num转换为sys进制,非递归法
+void sys_convert(int sys, int num)
+{
+  int n = num, result[100], i = 0;
+  while (n > 0)
+  {
+    result[i] = n % sys + CHAR_TO_NUM;
+    n = n / sys;
+    i++;
+  }
+  for (int k = i; k >= 0; k--)
+  {
+    putchar(result[k]);
+  }
+  putchar('\n');
+}
+
+// 将10进制的数字num转换为sys进制,递归法
+void sys_convert2(int sys, int num)
+{
+  int r;
+  r = num % sys;
+  if (num > sys)
+  {
+    sys_convert2(sys, num / sys);
+  }
+  putchar(r + CHAR_TO_NUM);
+}
+```
