--- a/核心笔记.md
+++ b/核心笔记.md
@@ -1,2 +1,5 @@
 1. printf 修饰
    此处为`%[flags][width][.precision][length]specifier`修饰。
+
+2. 多文件编译
+   gcc usehotel.c hotel.c -o test -fexec-charset=gbk
