--- a/核心笔记.md
+++ b/核心笔记.md
@@ -3,3 +3,53 @@
 
 2. 多文件编译
    gcc usehotel.c hotel.c -o test -fexec-charset=gbk
+
+3. c 语言参数为传值调用
+
+```c
+#include <stdio.h>
+
+void mikado(int num)
+{
+  int a = 2;
+  printf("%d的地址为%p.\n", a, &a);
+  printf("%d的地址为%p.\n", num, &num);
+}
+
+// 4个地址均不相同
+int main(void)
+{
+  int a = 2, num = 5;
+  printf("%d的地址为%p.\n", a, &a);
+  printf("%d的地址为%p.\n", num, &num);
+  mikado(num);
+  return 0;
+}
+```
+
+4. 指针
+
+以此可以推断 scanf 中传递地址（&a）源码,修改变量值。
+
+```c
+// 指针
+#include <stdio.h>
+
+// * 解引用与运算符
+void swap(int *a, int *b)
+{
+  int temp;
+  temp = *b;
+  *b = *a;
+  *a = temp;
+}
+
+int main(void)
+{
+  int a = 3, b = 9;
+  // 此处传递是地址
+  swap(&a, &b);
+  printf("a现在是%d，b现在是%d.\n", a, b);
+  return 0;
+}
+```
