--- a/核心笔记.md
+++ b/核心笔记.md
@@ -1,10 +1,12 @@
-1. printf 修饰
-   此处为`%[flags][width][.precision][length]specifier`修饰。
+## printf
 
-2. 多文件编译
-   gcc usehotel.c hotel.c -o test -fexec-charset=gbk
+1. `printf("")` 此处为`%[flags][width][.precision][length]specifier`修饰。
 
-3. c 语言参数为传值调用
+## 多文件编译
+
+gcc usehotel.c hotel.c -o test -fexec-charset=gbk
+
+## c 语言参数为传值调用
 
 ```c
 #include <stdio.h>
@@ -27,7 +29,7 @@ int main(void)
 }
 ```
 
-4. 指针
+## 指针
 
 以此可以推断 scanf 中传递地址（&a）源码,修改变量值。
 
@@ -52,4 +54,91 @@ int main(void)
   printf("a现在是%d，b现在是%d.\n", a, b);
   return 0;
 }
+```
+
+## 数组
+
+**数组名是指针常量**
+
+1. 数组初始化时，若数组项数小于数组大小，则剩余项数皆为 0，多于数组大小则为错误。
+
+2. 可以在初始化时，不设置数组大小，让编译器自动进行匹配。
+   此处可使用 sizeof days/sizeof days[0]计算项数  
+   `const int days[] = {31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31};`
+3. 同样的花括号法只能在初始化时使用，后续使用无效。
+
+```c
+int main (void){
+  int nums[10];
+  // 无效
+  nums ={1,2,3};
+  return 0;
+}
+```
+
+4. 数组大小必须是整数，且大于 0
+5. C99 前支持常量声明
+
+```c
+// c99前不支持，在c99千数组大小不能是变量
+// 此处const变量不被视为常量
+  int a = 3;
+  int nums[a];
+```
+
+6. 数组名是该数组首元素的地址
+
+```c
+// 地址均为000000000061fe00,000000000061fe00,000000000061fe00
+printf("地址是%p,%p,%p", arr, arr[0], &arr[0][0]);
+```
+
+7. 指针+1 是下一个元素的地址
+
+指针+1 是加一个**存储单元**，例如 short 则是加 2 字节，double 则是 8 字节
+
+```c
+#include <stdio.h>
+#define SIZE 4
+
+int main(void)
+{
+  short dates[SIZE];
+  short *pd;
+  double money[SIZE];
+  double *pm;
+  pd = dates;
+  pm = money;
+  // 成立
+  dates == &dates[0];
+  for (int i = 0; i < SIZE; i++)
+  {
+    printf("索引为%d,short地址为%10p,double地址为%10p.\n", i, pd + i, pm + i);
+  }
+  return 0;
+}
+/**
+索引为0,short地址为    61fe00,double地址为    61fde0.
+索引为1,short地址为    61fe02,double地址为    61fde8.
+索引为2,short地址为    61fe04,double地址为    61fdf0.
+索引为3,short地址为    61fe06,double地址为    61fdf8.
+ **/
+```
+
+8. 数组名常见特性成立
+
+```c
+#include <stdio.h>
+#define SIZE 4
+
+int main(void)
+{
+  short dates[SIZE];
+  // 成立
+  dates == &dates[0];
+  dates+2 == &dates[2];
+  *(dates+2) = dates[2];
+  return 0;
+}
+
 ```
