--- a/核心笔记.md
+++ b/核心笔记.md
@@ -31,7 +31,9 @@ int main(void)
 
 ## 指针
 
-以此可以推断 scanf 中传递地址（&a）源码,修改变量值。
+指针在 32 位系统中永远为 4 字节，64 位系统为 8 字节，指针是地址变量
+
+scanf 中传递地址（&a）源码,修改变量值。
 
 ```c
 // 指针
@@ -141,4 +143,14 @@ int main(void)
   return 0;
 }
 
+```
+
+9. 数组形参
+   传递是参数是数组的首地址，指针
+
+```c
+int sum(int *arr, int n);
+int sum(int *, int);
+int sum(int arr[], int n);
+int sum(int[], int n);
 ```
