--- a/核心笔记.md
+++ b/核心笔记.md
@@ -60,7 +60,7 @@ int main(void)
 
 ## 数组
 
-**数组名是指针常量**
+**数组名是指针常量(所以不能++，--操作)**,同时需要注意的是，数组不等于指针，数组的信息更加丰富，数组在函数使用传递参数会退化，但是在关键字中使用，例如 sizeof 不会退化。其他情况，数组和指针性质基本相同。
 
 1. 数组初始化时，若数组项数小于数组大小，则剩余项数皆为 0，多于数组大小则为错误。
 
