--- a/核心笔记.md
+++ b/核心笔记.md
@@ -58,9 +58,34 @@ int main(void)
 }
 ```
 
+1. 指针相减的结果表明的是相距多少个类型值
+
+```c
+int urn[5] = {22, 11, 20, 14, 23};
+int *ptr1=urn, *ptr2=&urn[2];
+// 结果为2，表明ptr1,ptr2相距两个int
+printf("ptr2-ptr1=%d.\n\n", ptr2 - ptr1);
+```
+
+2. 形式参数数组加上 const ,将不能修改原数组的值
+
+```c
+int sum_p(const int arr[], int n)
+{
+  int total = 0;
+  for (int i = 0; i < n; i++)
+  {
+    total += arr[i];
+  }
+  return total;
+}
+```
+
 ## 数组
 
 **数组名是指针常量(所以不能++，--操作)**,同时需要注意的是，数组不等于指针，数组的信息更加丰富，数组在函数使用传递参数会退化，但是在关键字中使用，例如 sizeof 不会退化。其他情况，数组和指针性质基本相同。
+
+指针表示法和数组表示法只是表示的区别。
 
 1. 数组初始化时，若数组项数小于数组大小，则剩余项数皆为 0，多于数组大小则为错误。
 
@@ -129,6 +154,8 @@ int main(void)
 
 8. 数组名常见特性成立
 
+**编译器是不区分 数组和指针的，所以如下语法实际上是一个含义。**
+
 ```c
 #include <stdio.h>
 #define SIZE 4
@@ -153,4 +180,35 @@ int sum(int *arr, int n);
 int sum(int *, int);
 int sum(int arr[], int n);
 int sum(int[], int n);
+```
+
+10. const 符号限定
+
+**需要注意的是指针变量前加上 const 修饰符，并不是表明变量本身不能改变，而是不能通过指针去修改它所指向的值**
+
+```c
+double rates[2] = {1.0,2.2};
+const double *p = rates;
+// 报错
+*pd =2.2
+// 报错
+p[1] = 3.2;
+// 允许
+pd++;
+// 允许
+pd = pd+1;
+// 允许
+rates[1];
+
+```
+
+只能把非 const 数据赋值给普通指针。
+
+```c
+// 此时不能修改值
+const double *p=arr;
+// 此时不能更改指针指向，但是能修改值
+double * const p=arr;
+// 此时既不能更改指向，也不能修改值
+const double * const p =arr;
 ```
