章节重命名

--- a/核心笔记.md
+++ b/核心笔记.md
@@ -123,6 +123,13 @@ printf("地址是%p,%p,%p", arr, arr[0], &arr[0][0]);
 7. 指针+1 是下一个元素的地址
 
 指针+1 是加一个**存储单元**，例如 short 则是加 2 字节，double 则是 8 字节
+如果是二维数组，则加整个数组的长度，例如
+
+```c
+int z[2][2]={{1,2},{3,4}};
+// 此处是+上两个int的长度，也就是一行的大小
+z+1;
+```
 
 ```c
 #include <stdio.h>
@@ -212,3 +219,9 @@ double * const p=arr;
 // 此时既不能更改指向，也不能修改值
 const double * const p =arr;
 ```
+
+### 二维数组
+
+二维数组数组表示法及 指针表示法示例。
+
+`z[2][1] == *(*(z+2)+1)`
