--- a/核心笔记.md
+++ b/核心笔记.md
@@ -222,6 +222,18 @@ const double * const p =arr;
 
 ### 二维数组
 
-二维数组数组表示法及 指针表示法示例。
+1. 二维数组数组表示法及 指针表示法示例。
 
 `z[2][1] == *(*(z+2)+1)`
+
+2. 不能将指向 int 或其他类型 的指针指向到 int 或其他类型的数组,也就是说指针指向的内容必须是相同的.
+   `cannot convert 'int [1][1]' to 'int\*' in assignment`
+
+```c
+int main(void)
+{
+  int *p;
+  int arr[1][1];
+  p = arr;
+}
+```
