二维数组与指针

--- a/核心笔记.md
+++ b/核心笔记.md
@@ -237,3 +237,17 @@ int main(void)
   p = arr;
 }
 ```
+
+3. c 规定数组的维数必须是常量
+
+```c
+// COLUMN为常量且必须要有
+int sum(int arr[][COLUMN],int n);
+```
+
+4. 数组复合字面量
+
+```c
+int *p;
+p=(int [2]){1,2,3};
+```
