--- a/核心笔记.md
+++ b/核心笔记.md
@@ -84,6 +84,7 @@ int sum_p(const int arr[], int n)
 ## 数组
 
 **数组名是指针常量(所以不能++，--操作)**,同时需要注意的是，数组不等于指针，数组的信息更加丰富，数组在函数使用传递参数会退化，但是在关键字中使用，例如 sizeof 不会退化。其他情况，数组和指针性质基本相同。
+**数组名是常量,指针是变量**
 
 指针表示法和数组表示法只是表示的区别。
 
@@ -251,3 +252,64 @@ int sum(int arr[][COLUMN],int n);
 int *p;
 p=(int [2]){1,2,3};
 ```
+
+## 字符串
+
+1. 字符串的初始化
+
+指定数组大小,要确保数组的元素个数比字符串多 1(为了容纳空字符),所有未被使用的都将被初始化为\0.  
+**需要注意的是字符串字面量被视为 const 声明的一段数据(静态存储区)**  
+数组和指针的不同声明形式性质也不同
+
+这段 MSG 字符虽然出现了两次,但是地址相同,使用数组形式声明则地址不同.  
+由此可以得出初始化数组是把静态存储区的字符串拷贝到数组中,而初始化指针只把字符串的地址拷贝到指针.
+
+```c
+#define MSG "i am special."
+#include <stdio.h>
+
+int main(void)
+{
+  char ar[] = MSG;
+  const char *pt = MSG;
+  // 地址为409000
+  printf("这段字符串的地址为%10p.\n", "i am special.");
+  // 地址为61fe0a
+  printf("ar地址为%10p.\n", ar);
+  // 地址为409000
+  printf("pt地址为%10p.\n", pt);
+  // 地址为409000
+  printf("MSG地址为%10p.\n", MSG);
+  // 14 8
+  printf("%zd,%zd", sizeof(ar), sizeof(pt));
+  return 0;
+}
+```
+
+2. 字符串声明的几个形式
+
+```c
+int main (void){
+  const char m2[] = "this is a string!";
+  char cookies[1];
+  // 使用指针法声明最好加上const限定符
+  const char *pt ="this is pointer";
+  return 0;
+}
+```
+
+3. 字符串输入必须显示声明数组的大小
+
+```c
+// 可能出现错误
+char *name;
+// 正确
+char name[81];
+```
+
+4. 不要使用 gets 函数
+
+5. fgets 及 fputs
+   当读取 (n-1) 个字符时，或者读取到换行符时，或者到达文件末尾时，它会停止，具体视情况而定。  
+    `char *fgets(char *__restrict__ _Buf, int _MaxCount, FILE *__restrict__ _File)`
+   读到文件结尾会返回一个空指针
