--- a/核心笔记.md
+++ b/核心笔记.md
@@ -313,3 +313,27 @@ char name[81];
    当读取 (n-1) 个字符时，或者读取到换行符时，或者到达文件末尾时，它会停止，具体视情况而定。  
     `char *fgets(char *__restrict__ _Buf, int _MaxCount, FILE *__restrict__ _File)`
    读到文件结尾会返回一个空指针
+
+6. strcat
+   第二个字符串的备份附加到第一个字符串的末尾,新字符串替代第一个字符串,第二字符串不变  
+   需要注意的是,strcat 函数不能检查第一个函数的空间是否能够容纳第二个函数.
+
+```c
+char str1[11] = "hi my love";
+char str2[] = "testtest";
+// 此时的str1已经越界,但是依然有可能正确输入,因为有可能str1的后续内存刚好可读写,所以正确写入
+strcat(str1, str2);
+```
+
+7. strcmp
+
+```c
+#define LIMIT 10
+char answer[LIMIT];
+while (strcmp(answer, "q\n"))
+{
+  puts("请输入亚索应该主修什么技能.");
+  fgets(answer, LIMIT, stdin);
+}
+printf("答案正确.\n");
+```
