--- a/核心笔记.md
+++ b/核心笔记.md
@@ -327,6 +327,8 @@ strcat(str1, str2);
 
 7. strcmp
 
+返回 0 则相同. 第一个字符串位于第二个字符串前面返回负数,反之返回正数.即是第一个参数减去第二个参数.
+
 ```c
 #define LIMIT 10
 char answer[LIMIT];
@@ -337,3 +339,6 @@ while (strcmp(answer, "q\n"))
 }
 printf("答案正确.\n");
 ```
+
+8. strncmp
+   比较字符串中的字符,直到第三个参数的字符数
