--- a/勘误.md
+++ b/勘误.md
@@ -82,3 +82,26 @@ void sys_convert2(int sys, int num)
 5. []运算符优先级大于\*指针
 
 6. 类型之间的赋值可以进行类型转换,但指针不能不同类型进行赋值
+
+## 包含指针的数组,指向数组的指针
+
+**注意不能直接将二维数组传递给指针数组!!**
+[文章解析](http://c.biancheng.net/view/335.html)
+
+1. int*p[5]
+   首先，对于语句“int*p1[5]”，因为“[]”的优先级要比\“_\”要高，所以 p1 先与“[]”结合，构成一个数组的定义，数组名为 p1，而\“int_\”修饰的是数组的内容，即数组的每个元素。也就是说，该数组包含 5 个指向 int 类型数据的指针，如图 1 所示，因此，它是一个指针数组。
+2. int (\*p2)[5]
+   其次，对于语句“int(\*p2)[5]”，“()”的优先级比“[]”高，“\_”号和 p2 构成一个指针的定义，指针变量名为 p2，而 int 修饰的是数组的内容，即数组的每个元素。也就是说，p2 是一个指针，它指向一个包含 5 个 int 类型数据的数组，如图 2 所示。很显然，它是一个数组指针，数组在这里并没有名字，是个匿名数组。
+
+```c
+
+// 一个数组,表明是一个具有5个int类型指针的数组
+int *p[5]==int **p;
+// 一个指针,指向具有5个int类型元素的数组
+int (*p)[5];
+
+int arr[5]={1，2，3，4，5};
+int (*p1)[5] = &arr;
+/*下面是错误的*/
+int (*p2)[5] = arr;
+```
