--- a/核心笔记.md
+++ b/核心笔记.md
@@ -227,6 +227,11 @@ const double * const p =arr;
 
 `z[2][1] == *(*(z+2)+1)`
 
+```c
+// 每行5个元素的数组指针。需要注意的是这里的*指针符号比数组符号优先级低,所以必须用括号来表示
+int (*p)[5];
+```
+
 2. 不能将指向 int 或其他类型 的指针指向到 int 或其他类型的数组,也就是说指针指向的内容必须是相同的.
    `cannot convert 'int [1][1]' to 'int\*' in assignment`
 
@@ -342,3 +347,23 @@ printf("答案正确.\n");
 
 8. strncmp
    比较字符串中的字符,直到第三个参数的字符数
+
+## main 的参数
+
+要么 0 个,要么两个
+
+```c
+#include <stdio.h>
+
+// 命令参数
+int main(int argc, char *argv[])
+{
+  printf("这个命令行有%d个参数.\n", argc - 1);
+  for (int i = 0; i < argc; i++)
+  {
+    printf("%d-%s\n", i, argv[i]);
+  }
+
+  return 0;
+}
+```
