--- a/核心笔记.md
+++ b/核心笔记.md
@@ -367,3 +367,34 @@ int main(int argc, char *argv[])
   return 0;
 }
 ```
+
+## 存储类型 链接 内存管理
+
+### 全局变量
+
+此处升的 units 变量具有文件作用域,也被称为全局变量
+
+```c
+#include <stdio.h>
+int units =0;
+void test();
+int main (void){
+  return 0;
+}
+```
+
+### 链接
+
+块作用域,函数作用域或函数原型作用域变量都是无链接变量
+
+```c
+// 文件作用域外部链接
+int giants =5;
+// 文件作用域 内部链接
+static int dodgers =3;
+int main(void){
+  return 0;
+}
+```
+
+该文件和统一程序的其他文件都可以使用 giants 而其他 dodgers 属于文件私有,该文件中的任意函数都可使用它
