--- a/核心笔记.md
+++ b/核心笔记.md
@@ -392,9 +392,39 @@ int main (void){
 int giants =5;
 // 文件作用域 内部链接
 static int dodgers =3;
+void more(int n){
+  // 每次调用函数都会创建,调用结束都会被销毁
+  int index;
+  // 此处的变量作用域具有静态存储期,从程序被载入到程序结束期间都存在,但是仍然只能在函数内访问
+  static int ct=0;
+}
 int main(void){
   return 0;
 }
 ```
 
 该文件和统一程序的其他文件都可以使用 giants 而其他 dodgers 属于文件私有,该文件中的任意函数都可使用它
+
+### 块作用域的静态变量
+
+stay 保存了被 1 递增后的值,但是 fade 变量每次都是 1,表明了初始化的不同,stay 只会在编译函数 try_stat 初始化一次,但是 fade 每次在被调用都会被初始化以此.**如果未显式声明静态变量,它们会被初始化未 0,非静态变量未显式声明则会从内存中随机取值**  
+需要注意的是不能在函数形式参数中使用 static
+
+```c
+#include <stdio.h>
+void try_stat(void)
+{
+  int fade = 1;
+  static int stay = 1;
+  printf("fade的地址是%3p,递增后的值为%d\nstay的地址是%3p,递增后的值为%d,.\n", &fade, fade++, &stay, stay++);
+}
+int main(void)
+{
+  for (int i = 0; i < 3; i++)
+  {
+    // stay分别输出1 2 3
+    try_stat();
+  }
+  return 0;
+}
+```
