--- a/核心笔记.md
+++ b/核心笔记.md
@@ -450,3 +450,115 @@ int main (void){
 return 0;
 exit(0);
 ```
+
+## 结构和其他数据形式
+
+### 结构变量
+
+1. 定义结构变量
+
+就计算机而言,以下声明皆等价
+
+```c
+struct book library;
+struct book {
+  char name[20];
+  float value;
+} library;
+struct {
+  char name[20];
+  float value;
+} library;
+```
+
+2. 初始化结构变量
+
+```c
+struct book library ={
+  "hello my friend!",
+  1.85
+};
+```
+
+3. 访问结构成员
+
+在 c 语言中 (.)被称为结构成员运算符, 本质上.title .name .value 相当于 book 结构的下标
+
+4. 结构的初始化器
+
+c99 及 c11 提供指定初始化器
+最好不要使用
+
+```c
+
+#include <stdio.h>
+// 需要注意的是在gnu 中指定初始化 字符串会报错所以尽量不要使用
+struct book
+{
+  char name[30];
+  float value;
+};
+int main(void)
+{
+  struct book library = {
+      .value = 20.3,
+      .name = "three kindom",
+  };
+  printf("书籍是%s,价格为%.3f.\n", library.name, library.value);
+  return 0;
+}
+
+```
+
+### 结构数组
+
+```c
+struct book {
+  char title[30];
+  char author[30];
+  float value;
+};
+
+struct book library[100];
+
+library[0].title;
+library[0].author;
+library[0].value;
+```
+
+#### 嵌套声明
+
+```c
+struct names{
+  char first[30];
+  char last[30];
+};
+struct guy{
+  struct names handle;
+  char favfood[20];
+  char job[20];
+  float income;
+
+};
+
+```
+
+### 指向结构的指针
+
+```c
+struct guy fellow[2] =
+      {
+          {{"RAN", "ZHI"},
+           "Tomato",
+           "programmer",
+           23000},
+          {{"Tom", "Ren"},
+           "Apple",
+           "javascript-programmer",
+           15000},
+      };
+struct guy *him;
+
+// 此处的指针符号需要括号,因为.运算符优先级高于指针运算符. 同时->表示该指针所指向结构的一个成员.只能在指针变量使用
+printf("him -> 收入是$%.2f:(*him).income 是$%.2f\n", him->income, (*him).income);
+```
