--- a/核心笔记.md
+++ b/核心笔记.md
@@ -81,6 +81,30 @@ int sum_p(const int arr[], int n)
 }
 ```
 
+### 引用传递 (大部分编译器不支持)
+
+若需将结果带回,那么需要添加&符号 引用传递
+
+```c
+#include <stdio.h>
+#include <stdbool.h>
+
+void test(int &x)
+{
+  x = 1024;
+}
+int main(void)
+{
+  int x = 0;
+  // 0
+  printf("x = %d.\n", x);
+  test(x);
+  // 1024
+  printf("x = %d.\n", x);
+  return 0;
+}
+```
+
 ## 数组
 
 **数组名是指针常量(所以不能++，--操作)**,同时需要注意的是，数组不等于指针，数组的信息更加丰富，数组在函数使用传递参数会退化，但是在关键字中使用，例如 sizeof 不会退化。其他情况，数组和指针性质基本相同。
