--- a/核心笔记.md
+++ b/核心笔记.md
@@ -534,6 +534,18 @@ int main(void)
 
 ```
 
+### 简化写法
+
+```c
+typedef struct {
+  int i;
+  int length;
+} Book;
+
+Book library;
+
+```
+
 ### 结构数组
 
 ```c
