--- a/核心笔记.md
+++ b/核心笔记.md
@@ -83,7 +83,7 @@ int sum_p(const int arr[], int n)
 
 ### 引用传递 (大部分编译器不支持)
 
-若需将结果带回,那么需要添加&符号 引用传递
+若需将结果带回,那么需要添加&符号 引用传递，c++
 
 ```c
 #include <stdio.h>
@@ -597,4 +597,53 @@ struct guy *him;
 
 // 此处的指针符号需要括号,因为.运算符优先级高于指针运算符. 同时->表示该指针所指向结构的一个成员.只能在指针变量使用
 printf("him -> 收入是$%.2f:(*him).income 是$%.2f\n", him->income, (*him).income);
+```
+
+### malloc
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(void)
+{
+  double *ptd;
+  int max;
+  int number;
+  int i = 0;
+  puts("输入一个数组大小.");
+  if (scanf("%d", &max) != 1)
+  {
+    puts("数字输入不正确,拜拜!");
+    exit(EXIT_FAILURE);
+  }
+  ptd = (double *)malloc(max * sizeof(double));
+  if (ptd == NULL)
+  {
+    puts("内存分配失败.");
+    exit(EXIT_FAILURE);
+  }
+  puts("输入值,按q关闭.");
+  while (i < max && scanf("%lf", &ptd[i]) == 1)
+  {
+    i++;
+  }
+  printf("有%d个实体.\n", number = i);
+  for (i = 0; i < number; i++)
+  {
+    printf("%7.2f", ptd[i]);
+    if (i % 7 == 6)
+    {
+      putchar('\n');
+    }
+  }
+  if (i % 7 != 0)
+  {
+    putchar('\n');
+  }
+  puts("done!");
+  free(ptd);
+
+  return 0;
+}
 ```
